@@ -19,10 +19,20 @@
 
   There is support for multiple RNG streams with the
   \samp{"L'Ecuyer-CMRG"} \link{RNG}: see \code{\link{nextRNGStream}}.
+
+  It contains functionality derived from and pretty much equivalent to
+  that contained in packages \pkg{multicore} (with some low-level
+  functions renamed) and \pkg{snow} (for socket clusters only, but MPI,
+  NWS and PVM clusters generated by \pkg{snow} are also supported).
   
   For a complete list of functions, use \code{library(help="parallel")}.
 }
 \author{
   Maintainer: R Core Team \email{R-core@r-project.org}
+}
+\seealso{
+  Parallel computation involves launching worker processes: functions
+  \code{\link{psnice}} and \code{\link{pskill}} in package \pkg{tools}
+  provide means to manage child processes.
 }
 \keyword{ package }
